# swust-auto-sign

./: Cargo.toml  README.md  自己创建油猴插件.js
src/: main.rs
