[package]
name = "swust_click_checkin"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.18", features = ["blocking", "multipart", "cookies", "json"] }
tokio = { version = "1.45.1", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
anyhow = "1.0.98"
uuid = { version = "1.0", features = ["v4"] }
chrono = "0.4.41"

